Removed all built-in table styles;  this was preventing table spacing, table cellpadding, table borders, etc

--- a/cpath/web/jsp/css/style.css
+++ b/cpath/web/jsp/css/style.css
@@ -166,6 +166,7 @@
 /* Table Headers */
 .table_head2 {
     background-color: #CC9999;
+    padding: 5px 2px 5px 5px;
     font-weight:bold;
 }
 
